@@ -1,22 +1,21 @@
-package net.toregard.customerorder.rest;
+package net.toregard.customerorder.command.rest;
 
 import net.toregard.customerorder.command.CreateOrderCommand;
 import org.axonframework.commandhandling.gateway.CommandGateway;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 import java.util.logging.Logger;
 
 @RestController
 @RequestMapping("/orders")
-public class OrderController {
+public class OrderApi {
     private final CommandGateway commandGateway;
-    Logger logger = Logger.getLogger("OrderController");
+    Logger logger = Logger.getLogger("OrderApi");
 
-    public OrderController(CommandGateway commandGateway) {
+    public OrderApi(CommandGateway commandGateway) {
         this.commandGateway = commandGateway;
     }
 
@@ -29,44 +28,41 @@ public class OrderController {
     "items": [
         {
             "orderItemId": "1",
-            "quantity": 11
+            "quantity": 11,
+            "name": "item 1"
         },
         {
             "orderItemId": "2",
-            "quantity": 22
+            "quantity": 22,
+            "name": "item 2"
         }
     ]
    }
      */
     @PostMapping
     public String createOrder(@RequestBody CreateOrderRestModel createOrderRestModel) {
-        logger.info(createOrderRestModel.toString());
-        try {
-            commandGateway.sendAndWait(
-                    CreateOrderCommand.builder()
-                            .OrderId(UUID.randomUUID().toString())
-                            .customerId(createOrderRestModel.getCustomerId())
-                            .items(createOrderRestModel.getItems())
-                            .build()
-            );
-        } catch (Exception e) {
-            throw new RuntimeException(e);
-        }
-        return "Ok";
+         createOrderRestModel.getOrderItems().forEach(data -> data.setOrderItemId(UUID.randomUUID().toString()));
+        return commandGateway.sendAndWait(
+                CreateOrderCommand.builder()
+                        .orderId(UUID.randomUUID().toString())
+                        .customerId(createOrderRestModel.getCustomerId())
+                        .items(createOrderRestModel.getOrderItems())
+                        .build()
+        );
     }
 
     public List<String> getOrders() {
-        return Arrays.asList("");
+        return List.of("");
     }
 
     @GetMapping("/order")
     public CreateOrderRestModel getOrder() {
         ArrayList<OrderItem> items = new ArrayList<OrderItem>();
-        items.add(new OrderItem("1", 11));
-        items.add(new OrderItem("2", 22));
+        items.add(new OrderItem("1", 11,"item 1"));
+        items.add(new OrderItem("2", 22,"item 2"));
         return CreateOrderRestModel.builder()
                 .customerId(UUID.randomUUID().toString())
-                .items(items)
+                .orderItems(items)
                 .build();
     }
 
